Gestión Booths - new
Funcionalidades implentadas para la creación de booths, asignadas a cada room mediante el room.id

--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -71,6 +71,9 @@
 
 
             <!-- Tabla roles asignados -->
+
+            <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">STAFF</h5>
+
             <table class="table mt-3">
                 <thead class="thead-dark">
                     <tr>
@@ -145,6 +148,9 @@
             <br>
 
             <!-- Desplegable para booths -->
+
+            <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">BOOTHS</h5>
+
             <div class="accordion" id="accordionBooths<%= room.id %>">
                 <% room.boothsDetails.forEach(booth => { %>
                     <div class="card">
