--- a/views/rooms/edit.ejs
+++ b/views/rooms/edit.ejs
@@ -41,7 +41,6 @@
             </div>
 
             <br>
-
             <% if (typeof error_msg !== 'undefined' && error_msg.length > 0) { %>
                 <div class="alert alert-danger" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold;">
                     <% error_msg.forEach(function(msg) { %>
@@ -61,7 +60,7 @@
                         <label for="language">Language:</label>
                         <select class="form-control" id="language" name="language" required>
                             <option value="" selected disabled> - Select Language - </option>
-                            <% languages.forEach(language => { %>
+                            <% allLanguages.forEach(language => { %>
                                 <option value="<%= language.name %>" <% if (room.language === language.name) { %> selected <% } %>><%= language.name %></option>
                             <% }); %>
                         </select>
