--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -230,7 +230,7 @@
             <!-- BUTTON: new booth -->
             <br>
             <div>
-                <a href="/rooms/<%= room.id %>/booths/new" class="btn btn-success">New Booth</a>
+                <a href="/rooms/<%= room.id %>/booths/new" class="btn btn-success btn-sm">New Booth</a>
             </div>
         </div>
     </div>
@@ -239,7 +239,7 @@
 <br>
 
 <!-- BUTTON: new room -->
-<div>
+<div class="text-center">
     <a href="/rooms/new" class="btn btn-success">New Room</a>
 </div>
 
