--- a/views/rooms/booths/delete.ejs
+++ b/views/rooms/booths/delete.ejs
@@ -1,68 +1,49 @@
 <!-- views/rooms/delete.ejs -->
 
-<h1 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Delete Room Confirmation</h1>
+<h1 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Delete Booth Confirmation</h1>
 
 <br>
 
-<form method="post" action="/rooms/<%= room.id %>?_method=DELETE">
+<form method="post" action="/rooms/<%= room.id %>/booths/<%= booth.id %>?_method=DELETE">
     
     <br>
 
-    <h4 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">ROOM <%= room.id %>: <%= room.name %></h4>
+    <h4 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">BOOTH <%= booth.id %> - ROOM <%= room.id %>: <%= room.name %></h4>
 
     <br>
 
     <div class="form-group">
         <label for="language">Language:</label>
-        <input type="language" class="form-control" id="language" name="language" value="<%= room.language %>" readonly>
+        <input type="language" class="form-control" id="language" name="language" value="<%= booth.language %>" readonly>
     </div>
 
     <div class="form-group">
-        <label for="date">Date:</label>
-        <input type="date" class="form-control" id="date" name="date" value="<%= room.date.toISOString().split('T')[0] %>" readonly>
-    </div>
-
-    <div class="form-group">
-        <label for="time_start">Start time:</label>
-        <input type="time_start" class="form-control" id="time_start" name="time_start" value="<%= room.time_start %>" readonly>
-    </div>
-
-    <div class="form-group">
-        <label for="time_finish">Finish Time:</label>
-        <input type="time_finish" class="form-control" id="time_finish" name="time_finish" value="<%= room.time_finish %>" readonly>
-    </div>
-
-    <div class="form-group">
-        <label for="place">Place:</label>
-        <input type="place" class="form-control" id="place" name="place" value="<%= room.place %>" readonly>
+        <label for="language_a">Language to:</label>
+        <input type="language_a" class="form-control" id="language_a" name="language_a" value="<%= booth.language_a %>" readonly>
     </div>
 
 
-    <!-- Agregar el número de booths y la tabla de booths -->
+    <!-- Agregar el número de Interpreters e info -->
     <br>
     <div class="form-group">
-        <p>Number of booths associated with this room: <b><%= room.boothsDetails.length %></b></p>
+        <p>Interpreters associated with this booth: <b><%= booth.interpreters.length %></b></p>
     </div>
     <br>
     <div class="form-group">
         <table class="table">
             <thead>
                 <tr>
-                    <th>Booths</th>
-                    <th>Language To</th>
-                    <th>Interpreters</th>
+                    <th>Interpreter ID</th>
+                    <th>Username</th>
+                    <th>Email</th>
                 </tr>
             </thead>
             <tbody>
-                <% room.boothsDetails.forEach(booth => { %>
+                <% booth.interpreters.forEach(interpreter => { %>
                     <tr>
-                        <td>Booth <%= booth.id %></td>
-                        <td><%= booth.language_a %></td>
-                        <td>
-                            <% 
-                            const interpreters = booth.interpreters.map(interpreter => interpreter.User.username);
-                            %>
-                            <%= interpreters.join(', ') %>
+                        <td><%= interpreter.id %></td>
+                        <td><%= interpreter.User.username %></td>
+                        <td><%= interpreter.User.email %>
                         </td>
                     </tr>
                 <% }); %>
@@ -77,8 +58,8 @@
     <br>
     
     <div>
-        <p><b>If you delete the room, the booths belonging to the room will also be deleted.</b></p>
-        <p>Are you sure you want to delete this room?</p>
+        <p><b>If you delete the booth, the interpreters will be unassigned.</b></p>
+        <p>Are you sure you want to delete this booth?</p>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-danger">Confirm deletion</button>
